--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@fortawesome/free-solid-svg-icons": "6.2.0",
     "@fortawesome/react-fontawesome": "0.2.0",
     "@reduxjs/toolkit": "1.8.5",
+    "antd": "^5.4.0",
     "axios": "0.27.2",
     "bootstrap": "5.2.0",
     "dayjs": "1.11.5",
